begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
begin_comment
comment|/**  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  * with the License.  You may obtain a copy of the License at  *<p>  * http://www.apache.org/licenses/LICENSE-2.0  *<p>  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
end_comment

begin_package
DECL|package|org.apache.hadoop.ozone.recon
package|package
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|recon
package|;
end_package

begin_import
import|import static
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|OMConfigKeys
operator|.
name|OZONE_OM_DB_DIRS
import|;
end_import

begin_import
import|import static
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|recon
operator|.
name|ReconServerConfigKeys
operator|.
name|OZONE_RECON_OM_SNAPSHOT_DB_DIR
import|;
end_import

begin_import
import|import static
name|org
operator|.
name|junit
operator|.
name|Assert
operator|.
name|assertNotNull
import|;
end_import

begin_import
import|import
name|java
operator|.
name|io
operator|.
name|File
import|;
end_import

begin_import
import|import
name|java
operator|.
name|io
operator|.
name|IOException
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|Collections
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|List
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hdds
operator|.
name|client
operator|.
name|BlockID
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hdds
operator|.
name|conf
operator|.
name|OzoneConfiguration
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hdds
operator|.
name|protocol
operator|.
name|proto
operator|.
name|HddsProtos
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hdds
operator|.
name|scm
operator|.
name|pipeline
operator|.
name|Pipeline
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hdds
operator|.
name|scm
operator|.
name|pipeline
operator|.
name|PipelineID
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|BucketManager
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|BucketManagerImpl
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|OMMetadataManager
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|OmMetadataManagerImpl
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|helpers
operator|.
name|OmBucketInfo
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|helpers
operator|.
name|OmKeyInfo
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|helpers
operator|.
name|OmKeyLocationInfo
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|helpers
operator|.
name|OmKeyLocationInfoGroup
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|helpers
operator|.
name|OmVolumeArgs
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|recon
operator|.
name|recovery
operator|.
name|ReconOMMetadataManager
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|recon
operator|.
name|recovery
operator|.
name|ReconOmMetadataManagerImpl
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|utils
operator|.
name|db
operator|.
name|DBCheckpoint
import|;
end_import

begin_import
import|import
name|org
operator|.
name|junit
operator|.
name|Rule
import|;
end_import

begin_import
import|import
name|org
operator|.
name|junit
operator|.
name|rules
operator|.
name|TemporaryFolder
import|;
end_import

begin_comment
comment|/**  * Utility methods for test classes.  */
end_comment

begin_class
DECL|class|AbstractOMMetadataManagerTest
specifier|public
specifier|abstract
class|class
name|AbstractOMMetadataManagerTest
block|{
annotation|@
name|Rule
DECL|field|temporaryFolder
specifier|public
name|TemporaryFolder
name|temporaryFolder
init|=
operator|new
name|TemporaryFolder
argument_list|()
decl_stmt|;
comment|/**    * Create a new OM Metadata manager instance.    * @throws IOException ioEx    */
DECL|method|initializeNewOmMetadataManager ()
specifier|protected
name|OMMetadataManager
name|initializeNewOmMetadataManager
parameter_list|()
throws|throws
name|IOException
block|{
name|File
name|omDbDir
init|=
name|temporaryFolder
operator|.
name|newFolder
argument_list|()
decl_stmt|;
name|OzoneConfiguration
name|omConfiguration
init|=
operator|new
name|OzoneConfiguration
argument_list|()
decl_stmt|;
name|omConfiguration
operator|.
name|set
argument_list|(
name|OZONE_OM_DB_DIRS
argument_list|,
name|omDbDir
operator|.
name|getAbsolutePath
argument_list|()
argument_list|)
expr_stmt|;
name|OMMetadataManager
name|omMetadataManager
init|=
operator|new
name|OmMetadataManagerImpl
argument_list|(
name|omConfiguration
argument_list|)
decl_stmt|;
name|String
name|volumeKey
init|=
name|omMetadataManager
operator|.
name|getVolumeKey
argument_list|(
literal|"sampleVol"
argument_list|)
decl_stmt|;
name|OmVolumeArgs
name|args
init|=
name|OmVolumeArgs
operator|.
name|newBuilder
argument_list|()
operator|.
name|setVolume
argument_list|(
literal|"sampleVol"
argument_list|)
operator|.
name|setAdminName
argument_list|(
literal|"TestUser"
argument_list|)
operator|.
name|setOwnerName
argument_list|(
literal|"TestUser"
argument_list|)
operator|.
name|build
argument_list|()
decl_stmt|;
name|omMetadataManager
operator|.
name|getVolumeTable
argument_list|()
operator|.
name|put
argument_list|(
name|volumeKey
argument_list|,
name|args
argument_list|)
expr_stmt|;
name|BucketManager
name|bucketManager
init|=
operator|new
name|BucketManagerImpl
argument_list|(
name|omMetadataManager
argument_list|)
decl_stmt|;
name|OmBucketInfo
name|bucketInfo
init|=
name|OmBucketInfo
operator|.
name|newBuilder
argument_list|()
operator|.
name|setVolumeName
argument_list|(
literal|"sampleVol"
argument_list|)
operator|.
name|setBucketName
argument_list|(
literal|"bucketOne"
argument_list|)
operator|.
name|build
argument_list|()
decl_stmt|;
name|bucketManager
operator|.
name|createBucket
argument_list|(
name|bucketInfo
argument_list|)
expr_stmt|;
return|return
name|omMetadataManager
return|;
block|}
comment|/**    * Get an instance of Recon OM Metadata manager.    * @return ReconOMMetadataManager    * @throws IOException when creating the RocksDB instance.    */
DECL|method|getTestMetadataManager ( OMMetadataManager omMetadataManager)
specifier|protected
name|ReconOMMetadataManager
name|getTestMetadataManager
parameter_list|(
name|OMMetadataManager
name|omMetadataManager
parameter_list|)
throws|throws
name|IOException
block|{
name|DBCheckpoint
name|checkpoint
init|=
name|omMetadataManager
operator|.
name|getStore
argument_list|()
operator|.
name|getCheckpoint
argument_list|(
literal|true
argument_list|)
decl_stmt|;
name|assertNotNull
argument_list|(
name|checkpoint
operator|.
name|getCheckpointLocation
argument_list|()
argument_list|)
expr_stmt|;
name|File
name|reconOmDbDir
init|=
name|temporaryFolder
operator|.
name|newFolder
argument_list|()
decl_stmt|;
name|OzoneConfiguration
name|configuration
init|=
operator|new
name|OzoneConfiguration
argument_list|()
decl_stmt|;
name|configuration
operator|.
name|set
argument_list|(
name|OZONE_RECON_OM_SNAPSHOT_DB_DIR
argument_list|,
name|reconOmDbDir
operator|.
name|getAbsolutePath
argument_list|()
argument_list|)
expr_stmt|;
name|ReconOMMetadataManager
name|reconOMMetaMgr
init|=
operator|new
name|ReconOmMetadataManagerImpl
argument_list|(
name|configuration
argument_list|)
decl_stmt|;
name|reconOMMetaMgr
operator|.
name|start
argument_list|(
name|configuration
argument_list|)
expr_stmt|;
name|reconOMMetaMgr
operator|.
name|updateOmDB
argument_list|(
name|checkpoint
operator|.
name|getCheckpointLocation
argument_list|()
operator|.
name|toFile
argument_list|()
argument_list|)
expr_stmt|;
return|return
name|reconOMMetaMgr
return|;
block|}
comment|/**    * Write a key to OM instance.    * @throws IOException while writing.    */
DECL|method|writeDataToOm (OMMetadataManager omMetadataManager, String key)
specifier|public
name|void
name|writeDataToOm
parameter_list|(
name|OMMetadataManager
name|omMetadataManager
parameter_list|,
name|String
name|key
parameter_list|)
throws|throws
name|IOException
block|{
name|String
name|omKey
init|=
name|omMetadataManager
operator|.
name|getOzoneKey
argument_list|(
literal|"sampleVol"
argument_list|,
literal|"bucketOne"
argument_list|,
name|key
argument_list|)
decl_stmt|;
name|omMetadataManager
operator|.
name|getKeyTable
argument_list|()
operator|.
name|put
argument_list|(
name|omKey
argument_list|,
operator|new
name|OmKeyInfo
operator|.
name|Builder
argument_list|()
operator|.
name|setBucketName
argument_list|(
literal|"bucketOne"
argument_list|)
operator|.
name|setVolumeName
argument_list|(
literal|"sampleVol"
argument_list|)
operator|.
name|setKeyName
argument_list|(
name|key
argument_list|)
operator|.
name|setReplicationFactor
argument_list|(
name|HddsProtos
operator|.
name|ReplicationFactor
operator|.
name|ONE
argument_list|)
operator|.
name|setReplicationType
argument_list|(
name|HddsProtos
operator|.
name|ReplicationType
operator|.
name|STAND_ALONE
argument_list|)
operator|.
name|build
argument_list|()
argument_list|)
expr_stmt|;
block|}
comment|/**    * Write a key to OM instance.    * @throws IOException while writing.    */
DECL|method|writeDataToOm (OMMetadataManager omMetadataManager, String key, String bucket, String volume, List<OmKeyLocationInfoGroup> omKeyLocationInfoGroupList)
specifier|protected
name|void
name|writeDataToOm
parameter_list|(
name|OMMetadataManager
name|omMetadataManager
parameter_list|,
name|String
name|key
parameter_list|,
name|String
name|bucket
parameter_list|,
name|String
name|volume
parameter_list|,
name|List
argument_list|<
name|OmKeyLocationInfoGroup
argument_list|>
name|omKeyLocationInfoGroupList
parameter_list|)
throws|throws
name|IOException
block|{
name|String
name|omKey
init|=
name|omMetadataManager
operator|.
name|getOzoneKey
argument_list|(
name|volume
argument_list|,
name|bucket
argument_list|,
name|key
argument_list|)
decl_stmt|;
name|omMetadataManager
operator|.
name|getKeyTable
argument_list|()
operator|.
name|put
argument_list|(
name|omKey
argument_list|,
operator|new
name|OmKeyInfo
operator|.
name|Builder
argument_list|()
operator|.
name|setBucketName
argument_list|(
name|bucket
argument_list|)
operator|.
name|setVolumeName
argument_list|(
name|volume
argument_list|)
operator|.
name|setKeyName
argument_list|(
name|key
argument_list|)
operator|.
name|setReplicationFactor
argument_list|(
name|HddsProtos
operator|.
name|ReplicationFactor
operator|.
name|ONE
argument_list|)
operator|.
name|setReplicationType
argument_list|(
name|HddsProtos
operator|.
name|ReplicationType
operator|.
name|STAND_ALONE
argument_list|)
operator|.
name|setOmKeyLocationInfos
argument_list|(
name|omKeyLocationInfoGroupList
argument_list|)
operator|.
name|build
argument_list|()
argument_list|)
expr_stmt|;
block|}
comment|/**    * Return random pipeline.    * @return pipeline    */
DECL|method|getRandomPipeline ()
specifier|protected
name|Pipeline
name|getRandomPipeline
parameter_list|()
block|{
return|return
name|Pipeline
operator|.
name|newBuilder
argument_list|()
operator|.
name|setFactor
argument_list|(
name|HddsProtos
operator|.
name|ReplicationFactor
operator|.
name|ONE
argument_list|)
operator|.
name|setId
argument_list|(
name|PipelineID
operator|.
name|randomId
argument_list|()
argument_list|)
operator|.
name|setNodes
argument_list|(
name|Collections
operator|.
name|EMPTY_LIST
argument_list|)
operator|.
name|setState
argument_list|(
name|Pipeline
operator|.
name|PipelineState
operator|.
name|OPEN
argument_list|)
operator|.
name|setType
argument_list|(
name|HddsProtos
operator|.
name|ReplicationType
operator|.
name|STAND_ALONE
argument_list|)
operator|.
name|build
argument_list|()
return|;
block|}
comment|/**    * Get new OmKeyLocationInfo for given BlockID and Pipeline.    * @param blockID blockId    * @param pipeline pipeline    * @return new instance of OmKeyLocationInfo    */
DECL|method|getOmKeyLocationInfo (BlockID blockID, Pipeline pipeline)
specifier|protected
name|OmKeyLocationInfo
name|getOmKeyLocationInfo
parameter_list|(
name|BlockID
name|blockID
parameter_list|,
name|Pipeline
name|pipeline
parameter_list|)
block|{
return|return
operator|new
name|OmKeyLocationInfo
operator|.
name|Builder
argument_list|()
operator|.
name|setBlockID
argument_list|(
name|blockID
argument_list|)
operator|.
name|setPipeline
argument_list|(
name|pipeline
argument_list|)
operator|.
name|build
argument_list|()
return|;
block|}
block|}
end_class

end_unit

